
syntax = "proto3";

package todo.app.grpc;

option java_package = "todo.app.grpc";

service TodoService {
  rpc CreateTodo(Todo) returns (ID);
  rpc GetTodo(ID) returns (Todo);
  rpc UpdateTodo(Todo) returns (ID);
  rpc DeleteTodo(ID) returns (ID);
  //server side streaming method
  rpc GetAllTodos(GetTodosRequest) returns (stream Todo);
}

message Todo {
  string todo_id = 1;
  string author_id = 2;
  string title = 3;
  string description = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
  enum TODO_STATUS {
      CREATED = 0;
      IN_PROGRESS = 1;
      COMPLETED = 2;
  }
  TODO_STATUS status = 7;
}
message ID {
  string todo_id = 1;
}

message GetTodosRequest {
  optional int64 page = 1;
  optional int64 limit = 2;
}

//May need to use for update, delete todo grpc methods
message TodoResult {
  bool is_success = 1;
  optional string todo_id = 2;

}
